Fixed zeynep submenu covering content on mobile phones

--- a/client/html/themes/elegance/aimeos.css
+++ b/client/html/themes/elegance/aimeos.css
@@ -5481,8 +5481,6 @@ body{
 	.zeynep .submenu {
 		background-color: #FFF;
 		background-color: var(--ai-bg, #FFF);
-		left: 20rem;
-		bottom:0;
 		min-height:100%;
 		overflow:hidden;
 		-webkit-overflow-scrolling:touch;
@@ -5490,7 +5488,9 @@ body{
 		pointer-events:none;
 		position:fixed;
 		top:0;
-		width:100%;
+		bottom:0;
+		left: -20rem;
+		width: 20rem;
 		z-index: 1;
 	}
 
